Reto 4 17 02 2024 02:08 pm. Final de la aplicación y documentada en javadoc. Instrucciones:
Una empresa de autobuses turísticos requiere el desarrollo de un programa para la venta de boletos de una de sus unidades de transporte, dicho programa realizará el registro y despliegue de pasajeros. El costo actual de los boletos es de $1250.50 MXN y deberás hacer uso de estructuras o colecciones de datos de tipo ArrayList de Java.

                                                                             A continuación, se enlistan los requerimientos que te han planteado:

                                                                             El programa deberá mostrar un menú con las siguientes opciones:
                                                                             A. Realizar venta de boleto
                                                                             B. Mostrar datos de la lista de ventas
                                                                             S. Finalizar programa
                                                                             El usuario indicará la opción a ejecutar hasta elegir la opción Finalizar programa.
                                                                             La opción A tiene los siguientes requerimientos:
                                                                             Se le solicitan al usuario los datos del comprador:
                                                                             Nombre completo del comprador
                                                                             Cantidad de boletos
                                                                             Se deberá capturar el nombre completo de cada pasajero adicional (excluyendo al comprador); estos datos serán almacenados en un vector y asociados al registro de venta del comprador.
                                                                             Una ve